Refactoring, tests, cleaner interfaces

--- a/theater/Dockerfile
+++ b/theater/Dockerfile
@@ -8,7 +8,9 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o main .
+RUN CGO_ENABLED=0 GOOS=linux go build -o theater .
+RUN go test -v ./...
 
 EXPOSE 8080
-CMD ["./main"]
+USER nonroot:nonroot
+CMD ["./theater"]
