--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
       - DB_USER=user
       - DB_PASSWORD=password
       - DB_NAME=mydb
-      - REDIS_HOST=redis
+      - REDIS_URL=redis:6379
     depends_on:
       redis:
         condition: service_healthy
