--- a/theater-website/package.json
+++ b/theater-website/package.json
@@ -14,13 +14,18 @@
     "next": "15.4.6",    
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-qrcode-logo": "^3.0.0"
+    "react-qrcode-logo": "^3.0.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/react": "19.1.9",
+    "@types/qrcode": "^1.5.5",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.56.0",
     "eslint-config-next": "13.4.19",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.3.3"
   }
 }
