Another set of claude changes, using Warp. Not yet reviewed, but UI works, for now

--- a/theater-website/.env.local.example
+++ b/theater-website/.env.local.example
@@ -3,3 +3,8 @@
 NEXT_PUBLIC_FIREBASE_API_KEY=your-api-key-here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+
+# Backend API Configuration (Optional)
+# If not set, the app will use mock data
+NEXT_PUBLIC_API_BASE_URL=https://your-backend-domain.com
+API_KEY=your-backend-api-key
