--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -29,9 +29,6 @@ tmp_table_size               = 32M
 sort_buffer_size             = 2M
 join_buffer_size             = 2M
 thread_cache_size            = 50
-query_cache_type             = 1
-query_cache_size             = 32M
-query_cache_limit            = 2M
 
 # InnoDB Settings
 default_storage_engine       = InnoDB
@@ -40,17 +37,17 @@ innodb_log_file_size         = 32M
 innodb_log_buffer_size       = 8M
 innodb_flush_log_at_trx_commit = 2
 innodb_lock_wait_timeout     = 50
-innodb_file_per_table        = 1
+innodb_file_per_table        = ON
 
 # Binary Logging (disabled for development)
 skip-log-bin
 
 # Error Logging
 log-error                    = /var/lib/mysql/error.log
-general_log                  = 0
+general_log                  = ON
 
 # Slow Query Log
-slow_query_log               = 1
+slow_query_log               = ON
 slow_query_log_file          = /var/lib/mysql/slow.log
 long_query_time              = 2
 
@@ -60,6 +57,21 @@ skip-external-locking
 
 # Performance Schema
 performance_schema           = ON
+
+[mysql]
+default-character-set        = utf8mb4
+
+[client]
+default-character-set        = utf8mb4
+port                         = 3306
+socket                       = /var/run/mysqld/mysqld.sock
+
+[mysqldump]
+quick
+quote-names
+max_allowed_packet           = 64M
+
+default_authentication_plugin = mysql_native_password
 
 [mysql]
 default-character-set        = utf8mb4
