--- a/docker/mysql/my.cnf
+++ b/docker/mysql/my.cnf
@@ -9,7 +9,7 @@ tmpdir                        = /tmp
 socket                        = /var/run/mysqld/mysqld.sock
 pid-file                      = /var/run/mysqld/mysqld.pid
 
-# Character Set and Collation
+# Character Set and Collation (MySQL 8.0 optimized)
 character-set-server          = utf8mb4
 collation-server             = utf8mb4_unicode_ci
 init-connect                 = 'SET NAMES utf8mb4'
@@ -22,7 +22,7 @@ interactive_timeout          = 28800
 wait_timeout                 = 28800
 back_log                     = 50
 
-# Memory Settings
+# Memory Settings (MySQL 8.0 optimized)
 key_buffer_size              = 16M
 max_heap_table_size          = 32M
 tmp_table_size               = 32M
@@ -30,14 +30,29 @@ sort_buffer_size             = 2M
 join_buffer_size             = 2M
 thread_cache_size            = 50
 
-# InnoDB Settings
+# InnoDB Settings (MySQL 8.0 optimized)
 default_storage_engine       = InnoDB
 innodb_buffer_pool_size      = 128M
 innodb_log_file_size         = 32M
 innodb_log_buffer_size       = 8M
-innodb_flush_log_at_trx_commit = 2
+innodb_flush_log_at_trx_commit = 1
 innodb_lock_wait_timeout     = 50
 innodb_file_per_table        = ON
+
+# Data persistence settings (MySQL 8.0 compatible)
+innodb_flush_method          = O_DIRECT
+innodb_doublewrite           = ON
+innodb_checksum_algorithm    = crc32
+
+# Recovery settings
+innodb_force_recovery        = 0
+innodb_fast_shutdown         = 1
+
+# MySQL 8.0 specific optimizations
+innodb_adaptive_hash_index   = ON
+innodb_change_buffering      = all
+innodb_read_io_threads       = 4
+innodb_write_io_threads      = 4
 
 # Binary Logging (disabled for development)
 skip-log-bin
@@ -55,22 +70,10 @@ long_query_time              = 2
 skip-name-resolve
 skip-external-locking
 
-# Performance Schema
+# Performance Schema (MySQL 8.0 default)
 performance_schema           = ON
 
-[mysql]
-default-character-set        = utf8mb4
-
-[client]
-default-character-set        = utf8mb4
-port                         = 3306
-socket                       = /var/run/mysqld/mysqld.sock
-
-[mysqldump]
-quick
-quote-names
-max_allowed_packet           = 64M
-
+# MySQL 8.0 Authentication (caching_sha2_password is default, but we use mysql_native_password for compatibility)
 default_authentication_plugin = mysql_native_password
 
 [mysql]
