--- a/theater-website/package.json
+++ b/theater-website/package.json
@@ -1,31 +1,78 @@
 {
-  "name": "ticket-website",
+  "name": "theater-website",
   "version": "1.0.0",
   "private": true,
+  "description": "Theater booking website built with Next.js, TypeScript, and Tailwind CSS",
+  "author": "Theater App Team",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "analyze": "ANALYZE=true next build",
+    "clean": "rm -rf .next out node_modules/.cache",
+    "postinstall": "next telemetry disable"
   },
   "dependencies": {
-    "axios": "^1.11.0",
-    "firebase": "12.1.0",
-    "next": "15.4.6",    
+    "next": "^15.5.3",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "axios": "^1.11.0",
+    "firebase": "^12.1.0",
+    "qrcode": "^1.5.3",
     "react-qrcode-logo": "^3.0.0",
-    "qrcode": "^1.5.3"
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
+    "framer-motion": "^11.11.17",
+    "date-fns": "^4.1.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
+    "next-seo": "^6.6.0",
+    "react-error-boundary": "^4.0.13",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/react": "19.1.9",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.0",
     "@types/qrcode": "^1.5.5",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.56.0",
-    "eslint-config-next": "13.4.19",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "5.3.3"
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "@next/bundle-analyzer": "^15.5.3"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
